# FastHTML-examples

./: .gitignore  README.md  pyproject.toml  requirements.txt
chat_with_login/: README.md  app.py
chat_with_login/static/: theme-toggle.js
todo_apps/: simple1.py  simple_2.py
tutorial/: app_0.py  tutorial.ipynb  tutorial_1.ipynb  tutorial_3.ipynb  tutorial_4.ipynb
