[project]
name = "fasthtml-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-fasthtml>=0.4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chat_with_login", "tutorial"]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
